[package]
name = "CatParser"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
description = "C/C++ code parser written in Rust"
readme = "README.md"
repository = "https://github.com/Voluptua/CatParser"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.0"